--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "@clerk/nextjs": "^4.27.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.6.0",
     "axios": "^1.6.2",
-    "framer-motion": "^10.16.8",
+    "framer-motion": "^10.16.14",
     "langchain": "^0.0.198",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-autosave": "^0.4.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -32,6 +34,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.8",
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
