home heading and description

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:p@ssword@localhost:3306/journal"
+DATABASE_URL="postgresql://postgres:cDRR1j51UK2hltA9@db.elfumgeaqpkodxnbpsje.supabase.co:5432/postgres"
