changed clerk to next-auth

--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:cDRR1j51UK2hltA9@db.elfumgeaqpkodxnbpsje.supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres:pDdMCk2BZLylcMhZ@db.elfumgeaqpkodxnbpsje.supabase.co:5432/postgres"
+GOOGLE_CLIENT_ID="90662748088-r7hvkbo3p7d0ck4ipgq8ar26tefn878e.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="D0+iHMeRiD1fmBSp+xeQlOGhOJevrYQULJUI7UyCKKk="
