--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.9",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@clerk/nextjs": "^4.27.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.6.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
     "langchain": "^0.0.198",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-autosave": "^0.4.3",
